# rocmGPUBenches

./: .gitignore  CMakeLists.txt  PROJECT-PLAN.md  PROJECT-PLAN.md.update  README.md  pyproject.toml
demos/: demo_cache_benchmark.ipynb  stream_benchmark.ipynb
demos/roofline/: roofline_benchmark.ipynb
docs/: architecture.md
src/rocmGPUBenches/: __init__.py  gpu_cache_benchmark.cpp  gpu_cache_benchmark.hpp  gpu_cache_bindings.cpp  gpu_cache_kernel_source.hpp  gpu_cache_kernels.hip  main.cpp  rocmGPUBenches.cpp
src/rocmGPUBenches/benchmarks/: base_benchmark.hpp  benchmark_runner.hpp  benchmark_runner_bindings.cpp  cache_benchmark_config.hpp  latency_benchmark_config.hpp  stream_benchmark_config.hpp
src/rocmGPUBenches/framework/: benchmark_runner.cpp  benchmark_runner_bindings.cpp
src/rocmGPUBenches/hiprtc_utils/: hip_rtc_bindings.cpp  hip_rtc_compiler.hpp
src/rocmGPUBenches/kernels/: cuda-memcpy.hip  gpu-l2-cache.hip  gpu-roofline.hip  gpu-strides.hip  latency_kernels.hpp  stream_kernels.hpp
src/rocmGPUBenches/kernels_to_integrate/: README.md  cuda-incore.hip  gpu-l2-stream.hip  gpu-small-kernels.hip  um-stream.hip
src/rocmGPUBenches/storage/: __init__.py  benchmark_db.py
src/rocmGPUBenches/visualization/: __init__.py  plotter.py
tests/: test_optimized_sweep.py  test_stream_benchmark.py
